redefined scroll values for navbar links and fixed white space

--- a/src/Components/Contactcomponents/Contactbox.scss
+++ b/src/Components/Contactcomponents/Contactbox.scss
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 24px;
   }
   
   .contact-box>ul>li {
