--- a/src/Components/Intro.scss
+++ b/src/Components/Intro.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 110.5vh;
+    height: 137.7vh;
 }
 
 @media screen and (max-width:1254px) {
